libs/toolkit-macros-tests/tests/ui/fail/unknown_capability.rs
use toolkit_macros::gear;

#[gear(name="x", capabilities=[foo])]
pub struct X;

fn main() {}
